--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-sudo: false
+sudo: true
 
 language: c
 
@@ -12,7 +12,7 @@ compiler:
 
 before_install:
   - sudo apt-get update
-  - sudo apt-get install qemu-user-static gcc-powerpc-linux-gnu
+  - sudo apt-get install tcc qemu-user-static gcc-powerpc-linux-gnu
 # tcc
 
 
