--- a/.travis.yml
+++ b/.travis.yml
@@ -5,15 +5,15 @@ language: c
 os:
   - linux
   - linux-ppc64le
+
 compiler:
   - clang
   - gcc
   - g++
-  - cpp
 
 before_install:
   - sudo apt-get update
-  - sudo apt-get install tcc qemu-user-static gcc-powerpc-linux-gnu
+  - sudo apt-get install -y tcc qemu-user-static gcc-powerpc-linux-gnu
 # tcc
 
 
