--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,8 @@ compiler:
   - g++
 
 before_install:
-  - sudo apt-get update
-  - sudo apt-get install -y tcc qemu-user-static gcc-powerpc-linux-gnu
+  - sudo yum update
+  - sudo yum install -y tcc qemu-user-static gcc-powerpc-linux-gnu
 # tcc
 
 
