--- a/.travis.yml
+++ b/.travis.yml
@@ -13,14 +13,14 @@ compiler:
 
 before_install:
   - sudo apt-get update
-  - sudo apt-get install -y tcc qemu-user-static gcc-powerpc-linux-gnu
+  - sudo apt-get install -y qemu-user-static gcc-powerpc-linux-gnu
 
 
 install:
   - ./autogen.sh
-  - env CC=tcc CFLAGS='-w' CPPFLAGS="-DDEV_MODE=1" ./configure --prefix=/tmp --disable-dependency-tracking --disable-shared || cat config.log
+  - env CC=gcc CFLAGS='-w' CPPFLAGS="-DDEV_MODE=1" ./configure --prefix=/tmp --disable-dependency-tracking --disable-shared || cat config.log
   - make -j $(nproc) && make check && make install
-  - env CC=tcc CPPFLAGS='-I/tmp/include' LDFLAGS='-L/tmp/lib' LD_LIBRARY_PATH='/tmp/lib' ./test/constcheck.sh
+  - env CC=gcc CPPFLAGS='-I/tmp/include' LDFLAGS='-L/tmp/lib' LD_LIBRARY_PATH='/tmp/lib' ./test/constcheck.sh
   - make uninstall
   - make distclean
 
