--- a/.travis.yml
+++ b/.travis.yml
@@ -12,15 +12,15 @@ compiler:
   - g++
 
 before_install:
-#  - sudo apt-get update
+  - sudo apt-get update
   - sudo apt-get install -y qemu-user-static gcc-powerpc-linux-gnu
 
 #env CC=tcc
 install:
   - ./autogen.sh
-  - env CFLAGS='-w' CPPFLAGS="-DDEV_MODE=1" ./configure --prefix=/tmp --disable-dependency-tracking --disable-shared || cat config.log
+  - env CC=tcc CFLAGS='-w' CPPFLAGS="-DDEV_MODE=1" ./configure --prefix=/tmp --disable-dependency-tracking --disable-shared || cat config.log
   - make -j $(nproc) && make check && make install
-  - env CPPFLAGS='-I/tmp/include' LDFLAGS='-L/tmp/lib' LD_LIBRARY_PATH='/tmp/lib' ./test/constcheck.sh
+  - env CC=tcc CPPFLAGS='-I/tmp/include' LDFLAGS='-L/tmp/lib' LD_LIBRARY_PATH='/tmp/lib' ./test/constcheck.sh
   - make uninstall
   - make distclean
 
