--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ compiler:
 
 before_install:
 #  - sudo apt-get update
-  - sudo apt-get install -y tcc qemu-user-static gcc-powerpc-linux-gnu
+  - sudo apt-get install -y qemu-user-static gcc-powerpc-linux-gnu
 
 #env CC=tcc
 install:
